--- a/restro-styles.css
+++ b/restro-styles.css
@@ -29,6 +29,7 @@ nav ul {
   text-align: right;
   color: white;
   margin-left: 50em;
+  align-items: end;
 }
 nav ul li {
   display: inline-flex;
@@ -165,4 +166,32 @@ h6 {
 .star {
   color: gray;
   text-shadow: 0 0 0#ffd700;
+}
+@media screen and (min-width: 320) {
+  section#hero {
+    width: 100%;
+  }
+  nav ul {
+    width: 100%;
+    margin-left: 35px;
+  }
+  header {
+    width: 100%;
+    text-align: center;
+  }
+  p {
+    margin-left: 40em;
+  }
+  section#menu {
+    width: 100%;
+  }
+  .box4 {
+    margin-left: 40em;
+  }
+  .rating {
+    text-align: center;
+  }
+  h6 {
+    margin-left: 30em;
+  }
 }
