--- a/restro-styles.css
+++ b/restro-styles.css
@@ -167,7 +167,7 @@ h6 {
   color: gray;
   text-shadow: 0 0 0#ffd700;
 }
-@media screen and (min-width: 320) {
+@media screen and (max-width: 320px) {
   section#hero {
     width: 100%;
   }
@@ -176,7 +176,7 @@ h6 {
     margin-left: 35px;
   }
   header {
-    width: 100%;
+    width: 50px;
     text-align: center;
   }
   p {
