--- a/restro-styles.css
+++ b/restro-styles.css
@@ -3,15 +3,188 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: "Times New Roman", Times, serif;
+  background-color: yellow;
+  width: 100%;
+}
+#hero {
+  width: 100%;
+  height: 100%;
+  background-image: url("https://img.freepik.com/premium-photo/italian-food-spagehetti-pasta-black-plate-dark-background_892776-24.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#begin {
+  justify-content: space-between;
+  margin: top;
+  color: white;
+  display: flex;
+}
+h3 {
+  color: white;
+  margin-left: 1px;
+}
+nav ul {
+  justify-content: space-evenly;
+  list-style: none;
+  color: white;
+}
+nav ul li {
+  display: inline;
+  padding: 3px;
+}
+.box1 {
+  border: 1px solid white;
+  width: 4em;
+  text-align: center;
+  background-color: white;
+  color: black;
+  display: inline;
+}
+header {
+  font-size: 7em;
+  font-weight: bold;
+  text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: yellow;
+}
+#bottom {
+  justify-content: space-between;
+  margin-bottom: 5px;
+  color: white;
+}
+p {
+  text-align: left;
+  padding: 1px;
+  color: white;
+}
+.box2 {
+  border: 1px solid white;
+  padding: 1px;
+  background-color: white;
+  margin-left: 1em;
+  width: 10.5em;
+  color: black;
+  margin-bottom: 4px;
+}
+.box3 {
+  width: 10.5em;
+  border: 1px solid white;
+  padding: 1px;
+  color: white;
+  margin-left: 1em;
+}
+section#Menu {
+  background-color: black;
+  color: white;
+  width: 100%;
+  border-radius: 10px;
+  margin-top: 5em;
+  margin-bottom: 5em;
+  padding: 1px;
+}
+.next {
+  justify-content: space-between;
+}
+.box4 {
+  width: 7em;
+  text-align: center;
+  border: 1px solid yellow;
+  color: black;
+  background-color: yellow;
+  justify-content: space-between;
+  padding: 1px;
+  height: 20px;
+  font-weight: bold;
+}
+h2 {
+  font-size: 3em;
+  padding: 5px;
+  margin-top: 1em;
+  margin-left: 35px;
+}
+h5 {
+  opacity: 0.7;
+  padding: 5px;
+  margin-left: 35px;
+}
+.menu_items {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  padding: 20px;
+  text-align: center;
+  align-items: center;
+}
+.menu_items img {
+  width: 100%;
+  height: 50%;
+  border-radius: 10px;
+  text-align: center;
+  align-items: center;
+}
+hr {
+  width: 100%;
+}
+.box5,
+.box6,
+.box7,
+.box8,
+.box9,
+.box10 {
+  width: 30%;
+  height: 40%;
+  padding: 20px;
+  margin: 17px;
+  border-radius: 15px;
+  background-color: black;
+  text-align: center;
+}
+
+.box div {
+  width: 100px;
+  height: 200px;
+  border-radius: 15px;
+  padding-bottom: 10px;
+}
+
+.box div img {
+  width: 90em;
+  height: 19em;
+  border-radius: 20em;
+}
+.rating {
+  justify-content: space-between;
+}
+
+h6 {
+  justify-content: space-between;
+}
+.star {
+  color: gray;
+  text-shadow: 0 0 0#ffd700;
+}
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: yellow;
+  width: 100%;
 }
 
-section#hero {
-  background-image: url(https://img.freepik.com/premium-photo/italian-food-spaghetti-pasta-black-plate-dark-background_892776-24.jpg);
+#hero {
+  width: 100%;
+  background-image: url("https://img.freepik.com/premium-photo/italian-food-spaghetti-pasta-black-plate-dark-background_892776-24.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 120%;
+  background-size: cover;
 }
 #begin {
   display: inline-flex;
@@ -113,7 +286,7 @@ h5 {
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
-  /*padding: 20px;*/
+  padding: 20px;
   text-align: center;
   align-items: center;
 }
@@ -194,4 +367,4 @@ h6 {
   h6 {
     margin-left: 30em;
   }
-}
+} */
