--- a/restro-styles.css
+++ b/restro-styles.css
@@ -12,7 +12,7 @@ body {
 #hero {
   width: 100%;
   height: 100%;
-  background-image: url("https://img.freepik.com/premium-photo/italian-food-spagehetti-pasta-black-plate-dark-background_892776-24.jpg");
+  background-image: url("https://th.bing.com/th/id/OIP.kqOLpra5Q4z_wSyWN660hgHaEJ?rs=1&pid=ImgDetMain");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -27,7 +27,6 @@ h3 {
   margin-left: 1px;
 }
 nav ul {
-  justify-content: space-evenly;
   list-style: none;
   color: white;
 }
@@ -50,32 +49,115 @@ header {
   flex-wrap: wrap;
   justify-content: center;
   color: yellow;
+  margin: 10%;
 }
 #bottom {
-  justify-content: space-between;
-  margin-bottom: 5px;
-  color: white;
-}
-p {
   text-align: left;
   padding: 1px;
   color: white;
+  justify-content: space-between;
+  display: flex;
+}
+
+.bottom p {
+  text-align: left;
+  padding: 1px;
+  color: white;
+  margin-bottom: 10em;
+}
+.box {
+  margin-bottom: 1em;
 }
 .box2 {
   border: 1px solid white;
   padding: 1px;
   background-color: white;
-  margin-left: 1em;
   width: 10.5em;
+  height: 20px;
   color: black;
   margin-bottom: 4px;
 }
 .box3 {
   width: 10.5em;
+  height: 20px;
   border: 1px solid white;
   padding: 1px;
   color: white;
-  margin-left: 1em;
+}
+.image-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  perspective: 1000px;
+  position: relative;
+  justify-content: center;
+  margin-top: 3rem;
+}
+
+.image1 {
+  width: 20%;
+  height: 160px;
+  margin-right: -25px;
+  margin-top: 5px;
+  transition: transform 0.3s;
+  border-radius: 3px;
+  box-shadow: 1px 1px 10px grey;
+}
+
+.image:hover {
+  transform: translateX(20px);
+  z-index: 1;
+  opacity: 0.8;
+  box-shadow: 0 0 10px (0, 0, 0, 0.5);
+}
+.image3 {
+  width: 20%;
+  height: 170px;
+  margin-right: -25px;
+  transition: transform 0.3s;
+  border-radius: 3px;
+  box-shadow: 1px 1px 10px black;
+}
+
+.image3:hover {
+  transform: translateX(20px);
+  z-index: 4;
+  opacity: 0.8;
+  box-shadow: 0 0 10px (0, 0, 0, 0.5);
+}
+.text b {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.text P {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.image-container text {
+  color: black;
+}
+.text hr {
+  color: #000;
+  width: 80%;
+  margin-left: 100px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+.line {
+  font-size: larger;
+  text-align: center;
+  color: black;
+  display: flex;
+  justify-content: center;
+  margin-right: 10%;
+}
+.line b {
+  margin-left: 10%;
 }
 section#Menu {
   background-color: black;
@@ -158,15 +240,79 @@ hr {
   border-radius: 20em;
 }
 .rating {
+  display: flex;
   justify-content: space-between;
 }
 
 h6 {
-  justify-content: space-between;
+  font-size: small;
 }
 .star {
   color: gray;
   text-shadow: 0 0 0#ffd700;
+}
+span {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+footer {
+  list-style: none;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  padding: 1em;
+}
+
+section#footer-items {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 10px));
+  gap: 3.5em;
+}
+
+.footer-contents h3 {
+  font-size: 50px;
+}
+
+.box19 {
+  color: black;
+  background-color: #ffd700;
+  height: 17px;
+  width: 5em;
+  text-align: center;
+  margin-top: 1em;
+}
+.footer-content h4 {
+  color: white;
+  margin-bottom: 1em;
+}
+.footer-content li {
+  margin-bottom: 16px;
+  transition: all 0.4s ease;
+}
+.footer-content li a {
+  display: block;
+  color: white;
+  font-size: small;
+  font-weight: 400;
+  transition: all 0.4s ease;
+  text-decoration: none;
+}
+.footer-contents p a {
+  color: white;
+  border-bottom: none;
+  text-decoration: none;
+  margin-bottom: 1em;
+}
+
+.icons a {
+  color: white;
+  transition: all 0.4s ease;
+}
+.icons p {
+  justify-content: space-evenly;
+  display: inline;
+  color: white;
 }
 
 /* * {
