--- a/restro-styles.css
+++ b/restro-styles.css
@@ -148,6 +148,7 @@ header {
   height: 1px;
   border: 1px solid black;
   display: flex;
+  flex-wrap: wrap;
   text-align: center;
   justify-self: center;
   justify-content: center;
@@ -181,9 +182,11 @@ section#Menu {
   width: 7em;
   text-align: center;
   border: 1px solid yellow;
+  border-radius: 5px;
+  cursor: pointer;
   color: black;
   background-color: #ffd700;
-  padding: 1px;
+  padding: 2px;
   height: 20px;
   font-weight: bold;
   margin-left: 3em;
@@ -194,10 +197,11 @@ h2 {
   margin-top: 1em;
   margin-left: 35px;
 }
-h5 {
+.column h5 {
   opacity: 0.7;
   padding: 5px;
   margin-left: 35px;
+  text-align: left;
 }
 .menu_items {
   display: flex;
@@ -205,8 +209,17 @@ h5 {
   flex-wrap: wrap;
   width: 100%;
   padding: 20px;
-  text-align: center;
+  text-align: left;
   align-items: center;
+}
+.menu_items h4 {
+  text-align: left;
+}
+.menu_items h5 {
+  color: white;
+  text-align: left;
+  margin-top: 5px;
+  opacity: 0.5;
 }
 .menu_items img {
   width: 100%;
@@ -231,7 +244,7 @@ hr {
   margin: 10px;
   border-radius: 15px;
   background-color: black;
-  text-align: center;
+  text-align: left;
 }
 
 .box div {
@@ -253,6 +266,7 @@ hr {
 
 .rating h6 {
   font-size: small;
+  margin: 3px;
 }
 .star {
   color: gray;
@@ -291,11 +305,48 @@ section h5 {
 section#outline h3 {
   color: #000;
   padding: 10px;
+  font-size: xx-large;
 }
 section#outline h6 {
   padding: 10px;
   opacity: 0.5;
 }
+.direction {
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+}
+.direction h6 {
+  color: black;
+}
+
+.arrow-btn:hover {
+  color: #ccc;
+}
+.arrows {
+  display: flex;
+}
+.left-arrow {
+  border: 1px solid white;
+  border-radius: 60%;
+  background-color: white;
+  color: #000;
+  padding: 3px;
+  margin: 3px;
+  cursor: pointer;
+  font-size: x-large;
+}
+.right-arrow {
+  background-color: #000;
+  color: white;
+  border: 1px solid #000;
+  border-radius: 60%;
+  font-size: 24px;
+  cursor: pointer;
+  padding: 3px;
+  margin: 3px;
+}
+
 .count {
   display: flex;
   justify-content: center;
@@ -304,19 +355,21 @@ section#outline h6 {
 .boxb,
 .boxc,
 .boxd {
-  width: 60%;
+  width: 90%;
   height: 40%;
-  margin: 5px;
+  padding: 5px;
   border-radius: 15px;
-  text-align: center;
+  text-align: left;
 }
 
 .count div img {
-  width: 50%;
+  width: 90%;
   height: 40%;
+  justify-content: center;
 }
 .count h6 {
   color: black;
+  text-align: left;
 }
 .count h3 {
   color: black;
@@ -352,9 +405,11 @@ section#footer-items {
   color: black;
   background-color: #ffd700;
   height: 17px;
-  width: 5em;
+  width: 7em;
   text-align: center;
   margin-top: 1em;
+  border-radius: 5px;
+  cursor: pointer;
 }
 #content {
   display: flex;
@@ -391,6 +446,7 @@ section#footer-items {
   font-weight: 400;
   /*transition: all 0.4s ease;*/
   text-decoration: underline;
+  text-decoration-color: grey;
   display: inline;
 }
 .footer-content1 li {
@@ -398,6 +454,8 @@ section#footer-items {
   transition: all 0.4s ease;
 }
 .footer-contents p a {
+  margin: 3px;
+  text-align: left;
   color: white;
   border-bottom: none;
   text-decoration: none;
@@ -410,6 +468,10 @@ section#footer-items {
 .icons a {
   color: white;
   transition: all 0.4s ease;
+  border: 1px solid white;
+  padding: 3px;
+  border-radius: 50px;
+  margin: 3px;
 }
 .sticker p {
   color: white;
@@ -452,6 +514,19 @@ section#footer-items {
   }
   .menu_items {
     justify-content: center;
+  }
+  .count {
+    width: 60%;
+    display: inline;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .count div img {
+    width: 60%;
+    display: inline;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
   }
   .image-container {
     display: flex;
@@ -534,9 +609,6 @@ section#footer-items {
   .image-container.text {
     font-size: smaller;
   }
-  .text hr {
-    width: 100%;
-  }
   .rating {
     display: inline;
     flex-wrap: wrap;
@@ -545,6 +617,13 @@ section#footer-items {
     display: inline;
     flex-wrap: wrap;
     justify-content: center;
+  }
+  .count div img {
+    display: inline;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
   .circle {
     display: inline;
