--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Times New Roman", Times, serif;
-  background-color: yellow;
+  background-color: #fff700;
   width: 100%;
 }
 #hero {
@@ -136,7 +136,7 @@ header {
   text-align: center;
   font-size: 20px;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
 }
 
 .image-container text {
@@ -155,6 +155,7 @@ header {
   justify-content: center;
 }
 .line {
+  padding: 7px;
   font-size: larger;
   text-align: center;
   color: black;
@@ -621,14 +622,15 @@ section#footer-items {
     background-size: cover;
     background-position: center;
   }
-  #begin {
+  /* #begin {
     flex-wrap: wrap;
     display: inline;
   }
   #bottom {
     flex-wrap: wrap;
     display: inline;
-  }
+    text-align: left;
+  }*/
   .box4 {
     display: inline;
     flex-wrap: wrap;
