--- a/style.css
+++ b/style.css
@@ -357,7 +357,7 @@ section#outline h6 {
 .boxb,
 .boxc,
 .boxd {
-  width: 90%;
+  width: 70%;
   height: 40%;
   padding: 5px;
   border-radius: 15px;
@@ -365,7 +365,7 @@ section#outline h6 {
 }
 
 .count div img {
-  width: 90%;
+  width: 100%;
   height: 40%;
   justify-content: center;
 }
@@ -538,6 +538,13 @@ section#footer-items {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
+  }
+  .boxa,
+  .boxb,
+  .boxc,
+  .boxd {
+    justify-content: center;
+    align-items: center;
   }
   .image-container {
     display: flex;
