--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
 }
 
 body {
@@ -16,32 +18,49 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-#begin {
-  padding: 20px;
-  justify-content: space-between;
-  margin: top;
-  color: white;
-  display: flex;
+nav {
+  height: 80px;
+  width: 100%;
 }
-h3 {
+label.logo {
   color: white;
-  margin-left: 1px;
+  font-size: 30px;
+  line-height: 80px;
+  padding: 0 100px;
+  font-weight: bold;
 }
 nav ul {
-  list-style: none;
-  color: white;
+  float: right;
+  margin-right: 20px;
 }
 nav ul li {
-  display: inline;
-  padding: 3px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0 5px;
 }
-.box1 {
-  border: 1px solid white;
-  width: 4em;
-  text-align: center;
-  background-color: white;
-  color: black;
-  display: inline;
+nav ul li a {
+  color: white;
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+a.active,
+a:hover {
+  background: #ffd700;
+  transition: 0.5s;
+}
+.checkbtn {
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+#check {
+  display: none;
 }
 header {
   font-size: 7em;
@@ -350,25 +369,21 @@ section#outline h6 {
 }
 
 .count {
-  display: flex;
+  width: 60%;
+  flex-wrap: wrap;
   justify-content: center;
-}
-.boxa,
-.boxb,
-.boxc,
-.boxd {
-  width: 70%;
-  height: 40%;
-  padding: 5px;
-  border-radius: 15px;
-  text-align: left;
+  align-items: center;
+  text-align: center;
 }
 
 .count div img {
-  width: 100%;
-  height: 40%;
+  width: 60%;
+  flex-wrap: wrap;
   justify-content: center;
+  text-align: center;
+  align-items: center;
 }
+
 .count h6 {
   color: black;
   text-align: left;
@@ -484,7 +499,28 @@ section#footer-items {
     width: 100%;
   }
 }
+@media screen and(max-width:952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+  nav ul li a {
+    font-size: 16px;
+  }
+}
 @media screen and(max-width:873px) {
+  .checkbtn {
+    display: block;
+  }
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: yellow;
+    top: 80px;
+    left: 0;
+    text-align: center;
+  }
   section#footer-items {
     justify-content: center;
     text-align: center;
@@ -541,14 +577,7 @@ section#footer-items {
     text-align: center;
     align-items: center;
   }
-  .boxa,
-  .boxb,
-  .boxc,
-  .boxd {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+
   .image-container {
     display: flex;
     flex-wrap: wrap;
@@ -627,14 +656,7 @@ section#footer-items {
     text-align: center;
     align-items: center;
   }
-  .boxa,
-  .boxb,
-  .boxc,
-  .boxd {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+
   .circle {
     overflow-x: hidden;
     flex-wrap: nowrap;
@@ -697,14 +719,6 @@ section#footer-items {
     justify-content: center;
     text-align: center;
     align-items: center;
-  }
-  .boxa,
-  .boxb,
-  .boxc,
-  .boxd {
-    justify-content: center;
-    align-items: center;
-    text-align: center;
   }
 
   .circle {
