--- a/style.css
+++ b/style.css
@@ -597,6 +597,9 @@ section#footer-items {
     justify-content: center;
     align-items: center;
   }
+  .image-container img {
+    width: 60%;
+  }
   .text p {
     font-size: small;
     padding: 2px;
