--- a/style.css
+++ b/style.css
@@ -580,11 +580,79 @@ section#footer-items {
   header {
     font-size: 50px;
   }
+  #bottom {
+    padding: 20px;
+  }
   .menu_items {
     justify-content: center;
   }
   div.count {
     width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .image-container {
+    width: 100%;
+    height: 60%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .image-container img {
+    width: 60%;
+  }
+  .text p {
+    font-size: small;
+    padding: 2px;
+  }
+  .menu_items img {
+    width: 100%;
+    height: 100%;
+  }
+  .box5,
+  .box6,
+  .box7,
+  .box8,
+  .box9,
+  .box10 {
+    width: 70%;
+  }
+
+  .circle {
+    overflow-x: hidden;
+    flex-wrap: nowrap;
+    white-space: nowrap;
+    justify-content: center;
+  }
+  .sticker p {
+    display: inline;
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 600px) {
+  #hero {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+  }
+  label.logo {
+    font-size: 20px;
+    padding-left: 20px;
+  }
+  header {
+    font-size: 50px;
+  }
+  #bottom {
+    padding: 20px;
+  }
+  .menu_items {
+    justify-content: center;
+  }
+  div.count {
+    width: 90%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -740,7 +808,7 @@ section#footer-items {
     text-align: center;
   }
   .text p {
-    font-size: small;
+    font-size: x-small;
     padding: 2px;
   }
   .rating {
@@ -861,7 +929,7 @@ section#footer-items {
     text-align: center;
   }
   .text p {
-    font-size: small;
+    font-size: x-small;
     padding: 2px;
   }
   .rating {
@@ -873,6 +941,9 @@ section#footer-items {
     justify-content: center;
     align-items: center;
     text-align: center;
+  }
+  section#outline p {
+    font-size: x-small;
   }
 
   .circle {
